CKAD/6. Services & Networking/5. Developing network policies/db-to-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db # Pod to which this policy applies to.
  policyTypes:
    - Ingress # Only need to restrict incoming traffic.
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: api-pod # Name of the Pod where the traffic orginates
      ports:
      - port: 3306
        protocol: TCP
  egress:
    - to:
      - ipBlock:
          cidr: "192.168.5.10/32"
      ports:
        - port: 80
          protocol: TCP
